--- a/.github/workflows/flatpak-builder.yml
+++ b/.github/workflows/flatpak-builder.yml
@@ -41,8 +41,9 @@ jobs:
           flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
           flatpak install --user -y flathub org.freedesktop.Platform/x86_64/23.08 org.freedesktop.Sdk/x86_64/23.08
 
-          # Initialize the repository directory using the manifest committed by the previous workflow
-          flatpak build-export repo com.google.Chrome.yaml
+          # The `flatpak-builder` command below will handle creating the 'repo' directory
+          # and exporting the build into it. The previous, incorrect `build-export` command
+          # has been removed to fix the error.
 
           # Build the manifest and put the result into the 'repo' directory
           flatpak-builder --repo=repo --force-clean build-dir com.google.Chrome.yaml
