--- a/.github/workflows/flatpak-builder.yml
+++ b/.github/workflows/flatpak-builder.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 'Install Dependencies'
-        run: sudo apt-get update && sudo apt-get install -y flatpak-builder
+        run: sudo apt-get update && sudo apt-get install -y flatpak-builder rpm2cpio
 
       - name: 'Build Flatpak into Repository'
         run: |
