--- a/.github/workflows/flatpak-builder.yml
+++ b/.github/workflows/flatpak-builder.yml
@@ -10,7 +10,7 @@ name: 'Build and Deploy Google Chrome Flatpak'
 
 on:
   workflow_run:
-    workflows: ["Update Google Chrome from RPM Repository"] # This MUST match the 'name' of the first workflow
+    workflows: ["Update Google Chrome"] # This MUST match the 'name' of the first workflow
     types:
       - completed
     branches:
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 'Install Dependencies'
-        run: sudo apt-get update && sudo apt-get install -y flatpak-builder rpm2cpio
+        run: sudo apt-get update && sudo apt-get install -y flatpak-builder
 
       - name: 'Build Flatpak into Repository'
         run: |
