--- a/.github/workflows/update-chrome.yml
+++ b/.github/workflows/update-chrome.yml
@@ -59,20 +59,17 @@ jobs:
 
           if [ "$CURRENT_CHECKSUM" = "$NEW_CHECKSUM" ]; then
             echo "No new version of Google Chrome found."
-            exit 0 # Exit successfully without doing anything else
+            echo "update_needed=false" >> $GITHUB_OUTPUT
           else
             echo "New version of Google Chrome found. Continuing..."
+            echo "update_needed=true" >> $GITHUB_OUTPUT
           fi
 
       - name: 'Update Manifest and Checksum File'
+        if: steps.check_updates.outputs.update_needed == 'true'
         run: |
           # Update the checksum file with the new version's hash
           echo "${{ steps.parse_package.outputs.checksum }}" > CHECKSUM.txt
-
-          # Rename the existing manifest to a template if it doesn't exist
-          if [ ! -f template.yaml ]; then
-            mv com.google.Chrome.yaml template.yaml
-          fi
 
           # Read the template and replace placeholders
           sed -e "s|\$VERSION|${{ steps.parse_package.outputs.version }}|g" \
@@ -83,6 +80,7 @@ jobs:
           echo "Generated com.google.Chrome.yaml"
 
       - name: 'Commit and Push Changes'
+        if: steps.check_updates.outputs.update_needed == 'true'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
