Fix permissions issue in update.yml

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,6 +24,8 @@ on:
 jobs:
   check_and_update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       version: ${{ steps.repo.outputs.version }}
       build: ${{ steps.check.outputs.update }}
